--- a/webdocs/skiutc.html
+++ b/webdocs/skiutc.html
@@ -11,4 +11,5 @@
 </body>
 <script src="./main.min.js"></script>
 <script src="./commons.min.js"></script>
+<script src="./assets/p5.min.js"></script>
 </html>
